--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 language: ruby
-bundler_args: --without tools 
 rvm:
   - 1.8.7
   - 1.9.3
   - 2.0.0
   - jruby-18mode # JRuby in 1.8 mode
   - jruby-19mode # JRuby in 1.9 mode
+  - jruby-head
   - rbx-18mode
   - rbx-19mode
-
+before_install:
+  - sudo apt-get update && sudo apt-get install libicu-dev
